Fix link text to be bolder and more visible

--- a/style.css
+++ b/style.css
@@ -96,7 +96,10 @@ figcaption {
   left: 0;
   bottom: 0;
   width: 100%;
+  height: 30px;
+  line-height: 30px;
   background-color: rgba(245, 245, 220, 0.561);
+  font-weight: bold;
 }
 
 img {
